# plato-quickstart

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: main.rs
